--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4",
-    "use-immer": "^0.8.1"
+    "use-immer": "^0.8.1",
+    "zustand": "^4.3.2"
   }
 }
